--- a/package.json
+++ b/package.json
@@ -17,8 +17,5 @@
     "bugs": {
         "url": "https://github.com/MaximVanhove/purge-fontawesome/issues"
     },
-    "homepage": "https://github.com/MaximVanhove/purge-fontawesome#readme",
-    "peerDependencies": {
-        "webpack": ">= 4.0.0"
-    }
+    "homepage": "https://github.com/MaximVanhove/purge-fontawesome#readme"
 }
